+ rogue reworked